--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\SUNITHASHEKAR\AppData\Local\Temp\testng-eclipse--552603607\testng-customsuite.xml</span>
+                    <span>C:\Users\SUNITHASHEKAR\AppData\Local\Temp\testng-eclipse--1952306190\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.LoginTests" hash-for-method="verifyCatalog">verifyCatalog</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.AddCatagProductXLtest" hash-for-method="verifyAddMultipleProdNegative(null, null, null, null, null, null, null, null, null)">verifyAddMultipleProdNegative(null, null, null, null, null, null, null, null, null)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.LoginTests" hash-for-method="verifyClickingofCatagory">verifyClickingofCatagory</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.LoginTests" hash-for-method="verifyLoginbtn">verifyLoginbtn</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.AddCatagProductXLtest" hash-for-method="verifyAddMultipleProdNegative(Uniform14, null, null, 1500.0, 560.0, Sports, 1.0, 800.0, 4.0)">verifyAddMultipleProdNegative(Uniform14, null, null, 1500.0, 560.0, Sports, 1.0, 800.0, 4.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +125,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.training.sanity.tests.LoginTests</span>
+              <span class="class-name">com.training.sanity.tests.AddCatagProductXLtest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyCatalog">
-                  </a> <!-- verifyCatalog -->
-                  <span class="method-name">verifyCatalog</span>
+                  <a name="verifyAddMultipleProdNegative(null, null, null, null, null, null, null, null, null)">
+                  </a> <!-- verifyAddMultipleProdNegative(null, null, null, null, null, null, null, null, null) -->
+                  <span class="method-name">verifyAddMultipleProdNegative</span>
+                  <span class="parameters">(null, null, null, null, null, null, null, null, null)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyClickingofCatagory">
-                  </a> <!-- verifyClickingofCatagory -->
-                  <span class="method-name">verifyClickingofCatagory</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyLoginbtn">
-                  </a> <!-- verifyLoginbtn -->
-                  <span class="method-name">verifyLoginbtn</span>
+                  <a name="verifyAddMultipleProdNegative(Uniform14, null, null, 1500.0, 560.0, Sports, 1.0, 800.0, 4.0)">
+                  </a> <!-- verifyAddMultipleProdNegative(Uniform14, null, null, 1500.0, 560.0, Sports, 1.0, 800.0, 4.0) -->
+                  <span class="method-name">verifyAddMultipleProdNegative</span>
+                  <span class="parameters">(Uniform14, null, null, 1500.0, 560.0, Sports, 1.0, 800.0, 4.0)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SUNITHASHEKAR\AppData\Local\Temp\testng-eclipse--552603607\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SUNITHASHEKAR\AppData\Local\Temp\testng-eclipse--1952306190\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +158,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.sanity.tests.LoginTests&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.AddCatagProductXLtest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyLoginbtn')
-data.setCell(0, 2, 'com.training.sanity.tests.LoginTests')
-data.setCell(0, 3, 1963);
+data.setCell(0, 1, 'verifyAddMultipleProdNegative')
+data.setCell(0, 2, 'com.training.sanity.tests.AddCatagProductXLtest')
+data.setCell(0, 3, 4194);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyCatalog')
-data.setCell(1, 2, 'com.training.sanity.tests.LoginTests')
-data.setCell(1, 3, 937);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyClickingofCatagory')
-data.setCell(2, 2, 'com.training.sanity.tests.LoginTests')
-data.setCell(2, 3, 667);
+data.setCell(1, 1, 'verifyAddMultipleProdNegative')
+data.setCell(1, 2, 'com.training.sanity.tests.AddCatagProductXLtest')
+data.setCell(1, 3, 3082);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -240,9 +226,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.training.sanity.tests.AddCatagProductXLtest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">verifyAddMultipleProd</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -251,23 +244,23 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.sanity.tests.LoginTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.training.sanity.tests.AddCatagProductXLtest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpBeforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verifyLoginbtn</span>
-                <span class="method-start">11706 ms</span>
+                <span class="method-name">verifyAddMultipleProdNegative(Uniform14, null, null, 1500.0, 560.0, Sports, 1.0, 800.0, 4.0)</span>
+                <span class="method-start">11695 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">verifyCatalog</span>
-                <span class="method-start">13673 ms</span>
+                <span class="method-name">verifyAddMultipleProdNegative(null, null, null, null, null, null, null, null, null)</span>
+                <span class="method-start">15892 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyClickingofCatagory</span>
-                <span class="method-start">14613 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">18976 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
