--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af6cff">  <td>20/05/07 01:05:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.LoginTests@675d3402]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1179381257</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/05/07 01:05:35</td>   <td>13668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.verifyCatalog()[pri:2, instance:com.training.sanity.tests.LoginTests@675d3402]">verifyCatalog</td> 
-  <td>main@1179381257</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/05/07 01:05:36</td>   <td>14608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.verifyClickingofCatagory()[pri:3, instance:com.training.sanity.tests.LoginTests@675d3402]">verifyClickingofCatagory</td> 
-  <td>main@1179381257</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/05/07 01:05:33</td>   <td>11702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.verifyLoginbtn()[pri:1, instance:com.training.sanity.tests.LoginTests@675d3402]">verifyLoginbtn</td> 
-  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="af6cff">  <td>20/05/20 21:20:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddCatagProductXLtest.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.AddCatagProductXLtest@482f8f11]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="af6cff">  <td>20/05/20 21:20:27</td>   <td>18972</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddCatagProductXLtest.tearDown()[pri:0, instance:com.training.sanity.tests.AddCatagProductXLtest@482f8f11]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="af6cff">  <td>20/05/20 21:20:20</td>   <td>11691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCatagProductXLtest.verifyAddMultipleProdNegative(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.AddCatagProductXLtest@482f8f11]">verifyAddMultipleProdNegative</td> 
+  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="af6cff">  <td>20/05/20 21:20:24</td>   <td>15888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCatagProductXLtest.verifyAddMultipleProdNegative(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.AddCatagProductXLtest@482f8f11]">verifyAddMultipleProdNegative</td> 
+  <td>main@1308244637</td>   <td></td> </tr>
 </table>
