--- a/test-output/old/Sample test Suite/methods-alphabetical.html
+++ b/test-output/old/Sample test Suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sample test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af6cff">  <td>20/05/05 23:15:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.setUp()[pri:0, instance:com.training.sanity.tests.LoginTests@482f8f11]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/05/05 23:15:49</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.LoginTests@482f8f11]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/05/05 23:16:04</td>   <td>14967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTests.tearDown()[pri:0, instance:com.training.sanity.tests.LoginTests@482f8f11]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/05/05 23:16:01</td>   <td>12543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.verifyLoginbtn()[pri:0, instance:com.training.sanity.tests.LoginTests@482f8f11]">verifyLoginbtn</td> 
-  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="af6cff">  <td>20/05/11 22:21:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.LoginTests@482f8f11]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>20/05/11 22:22:05</td>   <td>15213</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.HomePageTests@1593948d]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>20/05/11 22:22:21</td>   <td>31994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTests.tearDown()[pri:0, instance:com.training.sanity.tests.HomePageTests@1593948d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>20/05/11 22:22:18</td>   <td>28356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTests.verifyCartEdit()[pri:1, instance:com.training.sanity.tests.HomePageTests@1593948d]">verifyCartEdit</td> 
+  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="af6cff">  <td>20/05/11 22:22:24</td>   <td>34153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.verifyCartEdit()[pri:2, instance:com.training.sanity.tests.LoginTests@482f8f11]">verifyCartEdit</td> 
+  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="af6cff">  <td>20/05/11 22:22:02</td>   <td>12753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.verifyLoginbtn()[pri:1, instance:com.training.sanity.tests.LoginTests@482f8f11]">verifyLoginbtn</td> 
+  <td>main@597255128</td>   <td></td> </tr>
 </table>
